--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
 </head>
 <body>
   <section class="container">
-    <p id="question">What is A?</p>
+    <p id="question"></p>
     <ul id="choices">
-      <li>A0</li>
-      <li>A1</li>
-      <li>A2</li>
     </ul>
     <div id="btn" class="disabled">Next</div>
   </section>
